Added challenge points to leaderboard

--- a/beers/templates/beers/contest-leaderboard.html
+++ b/beers/templates/beers/contest-leaderboard.html
@@ -25,6 +25,9 @@
         Brewery Points
       </th>
       <th>
+        Challenge Gain - Loss
+      </th>
+      <th>
         Total Points
       </th>
       <th>
@@ -44,6 +47,9 @@
       </td>
       <td>
         {{ p.brewery_points }}
+      </td>
+      <td>
+        {{ p.challenge_point_gain }} - {{ p.challenge_point_loss }}
       </td>
       <td>
         {{ p.total_points }}
