--- a/beers/templates/base/base.html
+++ b/beers/templates/base/base.html
@@ -2,28 +2,52 @@
 <!DOCTYPE html>
 <html>
 	<head>
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+        
+        
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous"></script>
+        
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 		<link rel="stylesheet" href="{% static "css/beers.css" %}"/>
 		{% block scripts %}{% endblock %}
     <title>{% block title %}One Hundred Beers - Login{% endblock %}</title>
 	</head>
 	<body>
-		<div class="top">
-			<div class="header-title-box"><a href="{% url 'index' %}">One Hundred Beers</a></div>
-			<div class="header-login-box">
-				<span>
-				{% if request.user.is_authenticated %}
-						Welcome, {{ request.user.username }}
-						<a href="{% url 'profile' %}">
-							<img src="{% static 'images/icon-profile.png' %}" alt="Profile" class="profile-image"/>
-						</a>
-						<a style="font-size: 0.75rem; text-decoration: underline;" href="{% url 'logout' %}">(Logout)</a>
-				{% else %}
-					<a href="{% url 'signup' %}">Signup</a> or <a href="{% url 'login' %}">Login</a>
-				{% endif %}
-				</span>
-			</div>
-		</div>
-		<div class="top-image">
+        <nav class="navbar navbar-default navbar-static-top">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#hb-navbar-collapse" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">One Hundred Beers</a>
+                </div>
+                <div class="collapse navbar-collapse" id="hb-navbar-collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        {% if request.user.is_authenticated %}
+                            <li><p class="navbar-text">Welcome, {{ request.user.username }}</p></li>
+                            <li><a href="{% url 'profile' %}">Profile</a></li>
+                            <li><a href="{% url 'logout' %}">Logout</a></li>
+                        {% else %}
+                            <li><a href="{% url 'signup' %}">Signup</a></li>
+                            <li><a href="{% url 'login' %}">Login</a></li>
+                        {% endif %}
+                    </ul>
+                </div>
+
+            </div>
+        </nav>
+ 		<div class="top-image">
 			{% block banner_image %}
 			<img src="{% static "images/snow-restaurant-mountains-sky-blurred-short.png" %}" alt="Beers in a Row" id="topimage"/>
 			{% endblock %}
@@ -34,8 +58,8 @@
 			{% endblock %}
 			<div style="clear: both;">&nbsp;</div>
 		</div>
-		<div class="footer">
-			Copyright: Eileen Graham and Navin Vembar
-		</div>
+		<footer class="footer">
+            <div class="container">Copyright: Eileen Graham and Navin Vembar</div>	
+		</footer>
 	</body>
 </html>
