--- a/styles/sass/beers.scss
+++ b/styles/sass/beers.scss
@@ -112,6 +112,7 @@ $top-padding-horizontal:  5px / $default-font-size * 1em;
   }
 }
 
+/*
 .footer {
   height: 2em;
   color: lightgrey;
@@ -122,6 +123,7 @@ $top-padding-horizontal:  5px / $default-font-size * 1em;
   margin: 0em;
   font-size: 0.5em;
 }
+*/
 
 #topimage {
   width: 100%;
