Updated styling for leaderboard and beer list

--- a/styles/sass/beers.scss
+++ b/styles/sass/beers.scss
@@ -487,3 +487,94 @@ $validation-button-color: #599bb3;
     margin-bottom: 0.20em;
   }
 }
+
+.summary {
+    /* height: 100%; */
+}
+
+.summary-table  {
+    width: 100%;
+    margin-bottom: 4px;
+}
+
+.summary-table tr {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.summary-rank {
+    width: 10%;
+}
+
+.summary-player  {
+    width: 80%;
+}
+
+.summary-score  {
+    width: 10%;
+    float: right;
+}
+
+.login-entry {
+    padding-bottom: 3px;
+    padding-top: 3px;
+    width: 80%;
+}
+
+.login-buttons {
+    float: right;
+}
+
+.whats-this {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.leaderboard {
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-top: 10px;
+}
+
+.leaderboard-row {
+    padding: 3px;
+}
+
+.leaderboard-header {
+  background-color: darkgrey;
+  font-weight: bold;
+}
+
+.leaderboard-odd {
+    background-color: beige;
+}
+
+.leaderboard-even {
+    background-color: aliceblue;
+}
+
+.beer-list {
+}
+
+.beer-row {
+    padding: 3px;
+}
+
+.beer-header {
+  background-color: darkgrey;
+  font-weight: bold;
+}
+
+.beer-odd {
+    background-color: beige;
+}
+
+.beer-even {
+    background-color: aliceblue;
+}
+
+.beer-checkedin {
+  color: black;
+  background-color: lightgreen;
+  font-style: italic;
+}
