--- a/hundred_beers/static/css/beers.css
+++ b/hundred_beers/static/css/beers.css
@@ -462,3 +462,110 @@ img.column-icon {
   margin-top: 0.20em;
   margin-bottom: 0.20em;
 }
+
+/* line 491, ../../../styles/sass/beers.scss */
+.summary {
+  /* height: 100%; */
+}
+
+/* line 495, ../../../styles/sass/beers.scss */
+.summary-table {
+  width: 100%;
+  margin-bottom: 4px;
+}
+
+/* line 500, ../../../styles/sass/beers.scss */
+.summary-table tr {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+/* line 505, ../../../styles/sass/beers.scss */
+.summary-rank {
+  width: 10%;
+}
+
+/* line 509, ../../../styles/sass/beers.scss */
+.summary-player {
+  width: 80%;
+}
+
+/* line 513, ../../../styles/sass/beers.scss */
+.summary-score {
+  width: 10%;
+  float: right;
+}
+
+/* line 518, ../../../styles/sass/beers.scss */
+.login-entry {
+  padding-bottom: 3px;
+  padding-top: 3px;
+  width: 80%;
+}
+
+/* line 524, ../../../styles/sass/beers.scss */
+.login-buttons {
+  float: right;
+}
+
+/* line 528, ../../../styles/sass/beers.scss */
+.whats-this {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+/* line 533, ../../../styles/sass/beers.scss */
+.leaderboard {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-top: 10px;
+}
+
+/* line 539, ../../../styles/sass/beers.scss */
+.leaderboard-row {
+  padding: 3px;
+}
+
+/* line 543, ../../../styles/sass/beers.scss */
+.leaderboard-header {
+  background-color: darkgrey;
+  font-weight: bold;
+}
+
+/* line 548, ../../../styles/sass/beers.scss */
+.leaderboard-odd {
+  background-color: beige;
+}
+
+/* line 552, ../../../styles/sass/beers.scss */
+.leaderboard-even {
+  background-color: aliceblue;
+}
+
+/* line 559, ../../../styles/sass/beers.scss */
+.beer-row {
+  padding: 3px;
+}
+
+/* line 563, ../../../styles/sass/beers.scss */
+.beer-header {
+  background-color: darkgrey;
+  font-weight: bold;
+}
+
+/* line 568, ../../../styles/sass/beers.scss */
+.beer-odd {
+  background-color: beige;
+}
+
+/* line 572, ../../../styles/sass/beers.scss */
+.beer-even {
+  background-color: aliceblue;
+}
+
+/* line 576, ../../../styles/sass/beers.scss */
+.beer-checkedin {
+  color: black;
+  background-color: lightgreen;
+  font-style: italic;
+}
